fix:scrollbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,6 +53,26 @@ label {
   overflow: scroll;
 }
 
+ #centre_page::-webkit-scrollbar-track
+ {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   border-radius: 10px;
+   background-color: #F5F5F5;
+ }
+ 
+ #centre_page::-webkit-scrollbar
+ {
+   width: 12px;
+   background-color: #F5F5F5;
+ }
+ 
+ #centre_page::-webkit-scrollbar-thumb
+ {
+   border-radius: 10px;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+   background-color: #555;
+ }
+
 /*CLASSES*/
 .logo {
 	display:inline;
@@ -108,8 +128,10 @@ label {
 }
 
 .button_slide {
-  border-radius: 10px;
   padding: 5px 5px;
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
   display: inline-block;
   font-family: system-ui;
   font-size: 2em;
@@ -176,15 +198,7 @@ label {
   z-index: 10;
   }
   
-p#myPopupIndice{
-  color:back;
-}
-
-p#myPopupscore{
-  color:back;
-}
-
-p#myPopup{
+.pblack {
   color:back;
 }
 
@@ -200,9 +214,6 @@ p#myPopup{
   cursor: pointer;
   color: #333;
 }
-
-
-
 
 /*MASTERMIND*/
 
